src/test/ui/rfc-2008-non-exhaustive/improper_ctypes/extern_crate_improper.stderr
error: `extern` block uses type `types::NonExhaustiveEnum`, which is not FFI-safe
  --> $DIR/extern_crate_improper.rs:12:35
   |
LL |     pub fn non_exhaustive_enum(_: NonExhaustiveEnum);
   |                                   ^^^^^^^^^^^^^^^^^ not FFI-safe
   |
note: lint level defined here
  --> $DIR/extern_crate_improper.rs:2:9
   |
LL | #![deny(improper_ctypes)]
   |         ^^^^^^^^^^^^^^^
   = note: this enum is non-exhaustive

error: `extern` block uses type `types::NormalStruct`, which is not FFI-safe
  --> $DIR/extern_crate_improper.rs:14:44
   |
LL |     pub fn non_exhaustive_normal_struct(_: NormalStruct);
   |                                            ^^^^^^^^^^^^ not FFI-safe
   |
   = note: this struct is non-exhaustive

error: `extern` block uses type `types::UnitStruct`, which is not FFI-safe
  --> $DIR/extern_crate_improper.rs:16:42
   |
LL |     pub fn non_exhaustive_unit_struct(_: UnitStruct);
   |                                          ^^^^^^^^^^ not FFI-safe
   |
   = note: this struct is non-exhaustive

error: `extern` block uses type `types::TupleStruct`, which is not FFI-safe
  --> $DIR/extern_crate_improper.rs:18:43
   |
LL |     pub fn non_exhaustive_tuple_struct(_: TupleStruct);
   |                                           ^^^^^^^^^^^ not FFI-safe
   |
   = note: this struct is non-exhaustive

error: `extern` block uses type `types::NonExhaustiveVariants`, which is not FFI-safe
  --> $DIR/extern_crate_improper.rs:20:38
   |
LL |     pub fn non_exhaustive_variant(_: NonExhaustiveVariants);
   |                                      ^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = note: this enum has non-exhaustive variants

error: aborting due to 5 previous errors

